nicki: Software Encryption issue fixed
 - Changing the class for mpdecision from
   default to main. This is required as
   mpdecision access /data folder, so that
   when we start encryption vold signals all
   main services to stop. In the class default
   case mpdecision would still run and keep the
   data partition busy, which would cause the
   encryption to fail.

Change-Id: Ib2cfda1442f0a413fcf92cc8a8009e2b04a26098

--- a/rootdir/root/init.target.rc
+++ b/rootdir/root/init.target.rc
@@ -262,6 +262,7 @@ service thermald /system/bin/thermald
    group root
 
 service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+   class main
    user root
    disabled
 
